@@ -94,6 +94,8 @@ Features & Interface
 SQLObject 0.9.7
 ===============
 
+* Use VARCHAR(MAX) and VARBINARY(MAX) for MSSQL >= 9.0.
+
 * Fixed a minor bug in Set column.
 
 * A bug fixed for RowCreatedSignal together with InheritableSQLObject:
